<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.test.skb.ui.auth.AuthPresenter" />

        <variable
            name="auth"
            type="com.test.skb.repositories.server.model.Auth" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ViewAnimator
            android:id="@+id/animator_auth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:scene="@{auth.scene}">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline2"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/token"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:text="@={auth.token}"
                        tools:text="123" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.45" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:onClick="@{() -> presenter.signIn()}"
                    android:text="@string/signIn"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ic_launcher"
                    tools:ignore="ContentDescription" />

                <Button
                    android:id="@+id/button3"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="@{() -> presenter.continueWithoutRegistration()}"
                    android:text="@string/continueWithoutRegistration"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center_horizontal"
                    android:inputType="textUri"
                    android:onClick="@{() -> presenter.generateToken()}"
                    android:text="@string/generateToken"
                    android:textColor="#2196F3"
                    android:textColorLink="#2196F3"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <include
                layout="@layout/auth_load"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </ViewAnimator>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>